- Network/block list: add search button (link to ES blockchain search) - Block screen: fix TX input/output alignment

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -635,6 +635,7 @@ $screen-menu:                     845px;
 .button-text.button-small {
   @extend .button-small;
   padding: 5px 2px;
+  font-size: 12px !important;
 }
 
 .button-text-positive {
